--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>YouFinder - API GitHub</title>
+    <title>FinderYou - API GitHub</title>
     <link rel="icon" href="./github_icon.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
